--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,16 +1,10 @@
-<html>
-<head>
-  <title>From Russia to US</title>
-</head>
+{% extends "blog_base.html" %}
 
-<body>
-</body>
+{% block blog_content %}
 <ul>
-  <div style="position: absolute; top:70px; left:20px; width:800px;">
   {% for post in posts %}
   <li><a href="post/{{post.id}}"> {{ post.title }}</a><BR>{{ post.preview|safe }} <a href="post/{{post.id}}">...</a></li>
   <BR/>
   {% endfor %}
-  </div>
 </ul>
-</html>
+{% endblock %}
