--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
 
   <body>
     <!-- <div id="header" align="center"> -->
-    <!--   <a id="logo" href="/">Move</a> -->
+    <!--   <a id="logo" href="/">From Russia to US</a> -->
     <!-- </div> -->
 
     <div class="columns">
-      <div id="content" class="column" align="center">
+      <div id="content" class="column" >
         {% block content-header %}
           {% if error %}<div class="error">{{ error }}</div>{% endif %}
           {% if info %}<div class="info">{{ info }}</div>{% endif %}
