--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
   <BR>
   <form action="/accounts/external/mailru/login/" method="post">{% csrf_token %}
     <label for="username">Войти с помощью учетной записи Mail.Ru(временно не работает): </label>
-    <input type="text" name="username" value="" id="username">@mail.ru&nbsp&nbsp&nbsp<input type="submit" value="Выход" />
+    <input type="text" name="username" value="" id="username">@mail.ru&nbsp&nbsp&nbsp<input type="submit" value="Вход" />
   </form>
   <BR>
   <BR>
