--- a/blog/templates/blog_base.html
+++ b/blog/templates/blog_base.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 
-{% block content-header %}
+{% block header %}
 <div id="exit" align="right">
   <a href="/logout/">Выход</a>
 </div>
 {% endblock %}
 
 {% block content %}
-<div style="position: absolute; top:70px; left:20px; width:800px;">
   {% block blog_content %}
   {% endblock %}
-</div>
 {% endblock %}
