removed 'temporary out of service' for mail.ru

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
   <BR>
   <BR>
   <form action="/accounts/external/mailru/login/" method="post">{% csrf_token %}
-    <label for="username">Войти с помощью учетной записи Mail.Ru(временно не работает): </label>
+    <label for="username">Войти с помощью учетной записи Mail.Ru: </label>
     <input type="text" name="username" value="" id="username">@mail.ru&nbsp&nbsp&nbsp<input type="submit" value="Вход" />
   </form>
   <BR>
