logs from openid -> INFO level refactored yandex and mail.ru authentication commented login/password form

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,8 @@
   {% if form.errors %}
     <p class="error">Sorry, that's not a valid username or password</p>
   {% endif %}
-    
+
+  {% comment %}
   <form action="" method="post">{% csrf_token %}
     <label for="username">User name:</label>
     <input type="text" name="username" value="" id="username">
@@ -15,6 +16,7 @@
     <input type="submit" value="login" />
     <input type="hidden" name="next" value="{{ next|escape }}" />
   </form>
+  {% endcomment %}
 
   <BR>
   <BR>
