--- a/blog/templates/subscribe_already.html
+++ b/blog/templates/subscribe_already.html
@@ -6,6 +6,7 @@
 {% block blog_content %}
 
 <div align='center'>
-  Вы уже подписаны на уведомления. Уведомления отправляются на адрес: {{user.email}}
+  Вы уже подписаны на уведомления. Уведомления отправляются на адрес: {{user.email}}<BR/><BR/>
+  <a href="/">На главную</a>
 </div>
 {% endblock %}
