--- a/blog/templates/subscribe_un.html
+++ b/blog/templates/subscribe_un.html
@@ -6,7 +6,8 @@
 {% block blog_content %}
 
 <div align='center'>
-  Вы успешно отписались. Уведомления больше не будут приходить на адрес:{{ user.email }}
+  Вы успешно отписались. Уведомления больше не будут приходить на адрес:{{ user.email }}<BR/><BR/>
+  <a href="/">На главную</a>
 </div>
 
 {% endblock %}
