--- a/blog/templates/subscribe_un_notsubscribed.html
+++ b/blog/templates/subscribe_un_notsubscribed.html
@@ -6,7 +6,8 @@
 {% block blog_content %}
 
 <div align='center'>
-  Вы не были подписаны на уведомления
+  Вы не были подписаны на уведомления<BR/><BR/>
+  <a href="/">На главную</a>
 </div>
 
 {% endblock %}
