--- a/blog/templates/subscribed.html
+++ b/blog/templates/subscribed.html
@@ -6,7 +6,8 @@
 {% block blog_content %}
 
 <div align='center'>
-  Уведомления будут приходить на адрес: {{ user.email }}
+  Уведомления будут приходить на адрес: {{ user.email }}<BR/><BR/>
+  <a href="/">На главную</a>
 </div>
 
 {% endblock %}
