adde link to forum

--- a/blog/templates/blog_base.html
+++ b/blog/templates/blog_base.html
@@ -16,6 +16,7 @@
 </script>
 
 <div id="exit" align="right">
+  <a href="/forum">Форум</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   {% if is_subscribed %}
      <a href="/blog/unsubscribe/">Отписаться от уведомлений, </a>
   {% else %}
